--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "body-parser": "^1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    /**/require ejs
+    "ejs": "^2.3.3",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "method-override": "^2.3.4",
