--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   },
   "dependencies": {
     "body-parser": "^1.13.2",
+    "connect": "^3.4.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
     "express": "~4.13.1",
+    "express-helpers": "^1.3.2",
     "jade": "~1.11.0",
-    "method-override": "^2.3.4",
+    "method-override": "^2.3.5",
     "mongoose": "^4.0.7",
     "morgan": "~1.6.1"
   },
